# anilist_sdk

./: Cargo.toml  DOCUMENTATION_SUMMARY.md  README.md  env.example
.github/workflows/: ci.yml
examples/: authenticated_demo.rs  demo.rs
src/: client.rs  error.rs  lib.rs  main.rs  utils.rs
src/endpoints/: activity.rs  airing.rs  anime.rs  character.rs  forum.rs  manga.rs  mod.rs  notification.rs  recommendation.rs  review.rs  staff.rs  studio.rs  user.rs
src/models/: anime.rs  character.rs  manga.rs  media_list.rs  mod.rs  social.rs  staff.rs  user.rs
src/queries/: mod.rs
src/queries/activity/: create_text_activity.graphql  delete_activity.graphql  get_activity_by_id.graphql  get_activity_replies.graphql  get_following_activities.graphql  get_recent_activities.graphql  get_text_activities.graphql  get_user_activities.graphql  reply_to_activity.graphql  toggle_activity_reply_like.graphql  toggle_like.graphql
src/queries/airing/: get_episodes_in_range.graphql  get_next_episode.graphql  get_recently_aired.graphql  get_schedule_by_id.graphql  get_schedule_for_media.graphql  get_upcoming_episodes.graphql
src/queries/anime/: get_airing.graphql  get_by_id.graphql  get_by_season.graphql  get_popular.graphql  get_top_rated.graphql  get_trending.graphql  search.graphql
tests/: activity_tests.rs  airing_tests.rs  anime_tests.rs  auth_tests.rs  character_tests.rs  forum_tests.rs  integration_tests.rs  manga_tests.rs  notification_tests.rs  recommendation_tests.rs  review_tests.rs  staff_tests.rs  studio_tests.rs  test_utils.rs  user_tests.rs
(+58 files in other folders)
