[package]
name = "anilist-moe"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = "0.4.41"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4"
